- Added Change.removeAt method - Added Change.removeAll method (works with indexes and predicates) - Added Change.findFirst method - Added Change.findAll method (works with indexes and predicates) - Added Change.getAt method (replace "get(int index)") - Added Change.getAll method (works with predicates) - Added Change.getFirst method (works with predicates) - Added Change.ordered method (sorts array) - Added Change.unique method (retains only distinct elements) - Added Change.forEach method - Added Change.countMatches method (counts the occurrences of an element of a predicate) - Added Change.optimise method (applies change and returns a optimised generation 0 Origin instance with the resulting array - Got iteration to work properly for changes (now iterates through the parent changes) - Change.size, Change.isEmpty, Change.contains & Change.containsAll now work off final change array (after the change has been applied) - "matches" and "allMatch" methods have been moved from Change to ConditionalChange